# simple-monads

./: .bumpversion.cfg  README.md  pyproject.toml
.github/workflows/: python-app.yml
pyadt/: maybe.py  result.py
simple_monads/: __init__.py  maybe.py  result.py
tests/: test_maybe.py  test_result.py
