[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pyadt"
authors = [{name = "Dylan Baker", email = "dylan@pnwbakers.com"}]
dynamic = ["version", "description"]
requires-python = ">=3.10"

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["pyadt", "tests"]
